# Chip8-emuLattor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/platform/: window.cpp  window.hpp
